--- a/MViT.ipynb
+++ b/MViT.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = argparse.ArgumentParser(\"MaskedFormer\")\n",
+    "parser = argparse.ArgumentParser(\"MViT\")\n",
     "parser.add_argument('--dataset', choices=['LongKou', 'HanChuan', 'HongHu', 'Pavia'], default='Pavia', help='dataset to use')\n",
     "parser.add_argument('--seed', type=int, default=42, help='number of seed')\n",
     "parser.add_argument('--batch_size', type=int, default=30, help='number of batch size')\n",
